@@ -1,3 +1,6 @@
+Unreleased
+* Add support for the tabrmd TCTI. This is the new default.
+
 v2.0 - 2017-03-29
 * Tracked on the milestone: https://github.com/01org/tpm2.0-tools/milestone/2
 * Reworked all the tools to support configurable TCTIs, based on build time
